--- a/resources/less/mobile.less
+++ b/resources/less/mobile.less
@@ -1,1 +1,27 @@
 // Mobile Styles
+@media screen and (max-width: 450px) {
+    .hero {
+        scale: 60%;
+        margin: -60px auto;
+    }
+    .navBar {
+        position: absolute;
+        top: 50px;
+    }
+    #logo {
+        display:none;
+    }
+    .logo2 {
+        width: 25%;
+        position: absolute;
+        top: 2%;
+        left: 5%;
+    }
+    .card.-rounded {
+        margin: 20px 0;
+        width: 100%;
+    }
+    .card-icon {
+        display: none;
+    }
+}
