--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -39,6 +39,17 @@
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
     .-light-bg;
 }
+.hero {
+    margin: -70px auto 0 auto;
+    height: 300px;
+}
+#logo {
+    margin-top: -35px;
+}
+.logo2 {
+    width: 25%;
+    margin-top: -20px;
+}
 .sideBar {
     height:100vh;
     border-right: 1px solid @primary;
