--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -43,8 +43,8 @@
     margin: -70px auto 0 auto;
     height: 300px;
 }
-#logo {
-    margin-top: -35px;
+.logo {
+    margin-top: -20px;
 }
 .logo2 {
     width: 25%;
