--- a/resources/less/mobile.less
+++ b/resources/less/mobile.less
@@ -1,12 +1,8 @@
 // Mobile Styles
 @media screen and (max-width: 450px) {
-    .hero {
-        scale: 60%;
-        margin: -60px auto;
-    }
     .navBar {
         position: absolute;
-        top: 50px;
+        top: 45px;
     }
     .logo {
         display:none;
@@ -17,6 +13,16 @@
         top: 3%;
         left: 5%;
     }
+    // Page Styles
+    .hero {
+        scale: 70%;
+        height: 40%;
+        margin: -40px auto;
+    }
+    .firstRow {
+        margin-top: -20px;
+    }
+    // Card Styles
     .card.-rounded {
         margin: 20px 0;
         width: 100%;
