--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11550,28 +11550,6 @@ pre.wp-block-verse {
   transition-duration: 0.5s;
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
-.admin-buttons {
-  display: flex !important;
-  justify-content: flex-end;
-}
-.delete-button {
-  border: none;
-  padding: 0 5px;
-  margin: 0 5px;
-  background: #f3554c !important;
-}
-.delete-button:hover {
-  background: #ab3c36 !important;
-}
-.edit-button {
-  border: none;
-  padding: 0 5px;
-  margin: 0 5px;
-  background: #2a9d8f !important;
-}
-.edit-button:hover {
-  background: #1e6e65 !important;
-}
 .navigation {
   height: 105px;
   padding-top: 5px;
@@ -11674,6 +11652,99 @@ form button {
 form button:hover {
   background-color: #45a049;
 }
+.admin-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+#updateBird {
+  padding: 0;
+}
+/* Modal Background */
+.custom-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  justify-content: center;
+  align-items: center;
+}
+/* Modal Content Box */
+.custom-modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+  border-radius: 8px;
+}
+/* Close Button */
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+/* Form Elements */
+.form-group {
+  margin-bottom: 15px;
+}
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+.save-button {
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #2a9d8f;
+}
+.save-button:hover {
+  background: #1e6e65;
+}
+.edit-button {
+  width: 100%;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #2a9d8f;
+}
+.edit-button:hover {
+  background: #1e6e65;
+}
+.delete-button {
+  width: 100%;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #f3554c;
+}
+.delete-button:hover {
+  background: #ab3c36;
+}
 /* Mobile Styles */
 /* Breakpoints in file */
 @media screen and (max-width: 450px) {
@@ -11704,6 +11775,9 @@ form button:hover {
   }
   .card-icon {
     display: none;
+  }
+  #updateBird {
+    padding: 0;
   }
 }
 /* Uncomment to enable Dark Mode styles
