--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -6,32 +6,6 @@
     transition-duration: 0.5s;
     .-shadow-large
 }
-.admin-buttons {
-    display: flex !important;
-    justify-content: flex-end;
-}
-.delete-button {
-    border: none;
-    padding: 0 5px;
-    margin: 0 5px;
-
-    .-tomato-bg !important;
-
-    &:hover {
-        .-tomato-700-bg !important;
-    }
-}
-.edit-button {
-    border: none;
-    padding: 0 5px;
-    margin: 0 5px;
-
-    .-clover-bg !important;
-
-    &:hover {
-        .-clover-700-bg !important;
-    }
-}
 .navigation {
     height: 105px;
     padding-top: 5px;
@@ -91,12 +65,6 @@ body {
         height: 300px;
     }
 }
-
-
-
-
-
-
 .accordion {
     width: 100%;
     max-width: 600px;
@@ -151,3 +119,111 @@ form button {
 form button:hover {
     background-color: #45a049;
 }
+.admin-buttons {
+    display:flex;
+    justify-content: space-between;
+}
+#updateBird {
+    padding: 0;
+}
+/* Modal Background */
+.custom-modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    align-items: center;
+}
+
+/* Modal Content Box */
+.custom-modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 8px;
+}
+
+/* Close Button */
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Form Elements */
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.save-button {
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+    .-clover-bg;
+}
+
+.save-button:hover {
+    .-clover-700-bg;
+}
+
+.edit-button {
+    width: 100%;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+    .-clover-bg;
+}
+
+.edit-button:hover {
+    .-clover-700-bg;
+}
+.delete-button {
+    width: 100%;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+    .-tomato-bg;
+}
+
+.delete-button:hover {
+    .-tomato-700-bg;
+}
+
