--- a/resources/less/mobile.less
+++ b/resources/less/mobile.less
@@ -16,7 +16,7 @@
     // Page Styles
     .hero {
         scale: 70%;
-        height: 40%;
+        height: auto;
         margin: -40px auto;
     }
     .firstRow {
