--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -15,7 +15,10 @@
 }
 .hero {
     margin: -70px auto 0 auto;
-    height: 300px;
+    height: auto;
+    width: 100%;
+    max-width: 300px;
+    object-fit: contain;
 }
 .logo {
     margin-top: -20px;
