--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -125,6 +125,9 @@ form button:hover {
 .admin-buttons {
     display:flex;
     justify-content: space-between;
+    position: absolute;
+    bottom: 15px;
+    left: 0;
 }
 #updateBird {
     padding: 0;
@@ -201,6 +204,10 @@ form button:hover {
     .-clover-700-bg;
 }
 
+.card-content p {
+    margin-bottom: 40px;
+}
+// Admin buttons
 .edit-button {
     width: 100%;
     color: white;
