card styles and comments

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11555,6 +11555,9 @@ pre.wp-block-verse {
   padding-top: 5px;
   border-bottom: 1px solid #d0d0cf;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  position: sticky;
+  top: 0;
+  z-index: 2;
   background: #f3f3f3;
 }
 .hero {
@@ -11655,13 +11658,6 @@ form button {
 form button:hover {
   background-color: #45a049;
 }
-.admin-buttons {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  bottom: 15px;
-  left: 0;
-}
 #updateBird {
   padding: 0;
 }
@@ -11728,7 +11724,18 @@ form button:hover {
   background: #1e6e65;
 }
 .card-content p {
-  margin-bottom: 40px;
+  margin-bottom: 70px;
+  height: 165px;
+  overflow-y: scroll;
+}
+.admin-buttons {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  padding-top: 15px;
+  bottom: 15px;
+  left: 0;
+  border-top: 1px solid #f3f3f3;
 }
 .edit-button {
   width: 100%;
@@ -11767,7 +11774,7 @@ form button:hover {
   .logo2 {
     width: 25%;
     position: absolute;
-    top: 3%;
+    top: 30px;
     left: 5%;
   }
   .hero {
@@ -11787,6 +11794,13 @@ form button:hover {
   }
   #updateBird {
     padding: 0;
+  }
+  .delete-button,
+  .edit-button {
+    height: 100%;
+  }
+  .admin-buttons .five.columns {
+    margin-bottom: 0 !important;
   }
 }
 /* Uncomment to enable Dark Mode styles
