--- a/resources/less/mobile.less
+++ b/resources/less/mobile.less
@@ -10,7 +10,7 @@
     .logo2 {
         width: 25%;
         position: absolute;
-        top: 3%;
+        top: 30px;
         left: 5%;
     }
     // Page Styles
@@ -32,5 +32,12 @@
     }
     #updateBird {
         padding: 0;
+    }
+    .delete-button,
+    .edit-button {
+        height: 100%;
+    }
+    .admin-buttons .five.columns {
+        margin-bottom: 0 !important;
     }
 }
