--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -239,9 +239,25 @@ form button:hover {
     cursor: pointer;
 
     .-tomato-bg;
+
+    &:hover {
+        .-tomato-700-bg;
+    }
 }
 
-.delete-button:hover {
-    .-tomato-700-bg;
+.cancel-button {
+    width: 100% !important;
+    color: black;
+    padding: 10px 20px !important;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+    .-light-bg;
+
+    &:hover {
+        .-light-700-bg;
+    }
 }
+
 
