--- a/resources/less/mobile.less
+++ b/resources/less/mobile.less
@@ -34,10 +34,15 @@
         padding: 0;
     }
     .delete-button,
-    .edit-button {
+    .edit-button,
+    .cancel-button {
         height: 100%;
     }
     .admin-buttons .five.columns {
         margin-bottom: 0 !important;
+    }
+    h2.modal-text {
+        font-size: 18px;
+        text-align: center;
     }
 }
