--- a/resources/less/mobile.less
+++ b/resources/less/mobile.less
@@ -38,6 +38,10 @@
     .cancel-button {
         height: 100%;
     }
+    .cancel-button {
+        width: 100% !important;
+        padding: 10px 20px !important;
+    }
     .admin-buttons .five.columns {
         margin-bottom: 0 !important;
     }
