--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -246,9 +246,9 @@ form button:hover {
 }
 
 .cancel-button {
-    width: 100% !important;
+    width: 100%;
     color: black;
-    padding: 10px 20px !important;
+    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
