--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11724,18 +11724,13 @@ form button:hover {
   background: #1e6e65;
 }
 .card-content p {
-  margin-bottom: 70px;
   height: 165px;
   overflow-y: scroll;
 }
 .admin-buttons {
   display: flex;
   justify-content: space-between;
-  position: absolute;
   padding-top: 15px;
-  bottom: 15px;
-  left: 0;
-  border-top: 1px solid #f3f3f3;
 }
 .edit-button {
   width: 100%;
@@ -11772,6 +11767,53 @@ form button:hover {
 }
 .cancel-button:hover {
   background: #ababab;
+}
+.admin-drawer {
+  background-color: #f9f9f9;
+  padding: 10px;
+  margin-top: 10px;
+  display: none;
+}
+.plus-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+.plus-icon {
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+.plus-icon span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 3px;
+  /* Thickness of the lines */
+  background-color: black;
+  transition: all 0.3s ease;
+}
+.plus-icon .vertical {
+  top: 0;
+  left: 50%;
+  height: 100%;
+  width: 3px;
+  /* Thickness of the vertical line */
+  transform: translateX(-50%);
+}
+.plus-icon .horizontal {
+  top: 50%;
+  left: 0;
+  height: 3px;
+  /* Thickness of the horizontal line */
+  transform: translateY(-50%);
+}
+.plus-icon.open .vertical {
+  opacity: 0;
+}
+.plus-icon.open .horizontal {
+  transform: translateY(-50%) rotate(0deg);
 }
 /* Mobile Styles */
 /* Breakpoints in file */
