--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11724,13 +11724,19 @@ form button:hover {
   background: #1e6e65;
 }
 .card-content p {
+  margin-bottom: 20px;
   height: 165px;
   overflow-y: scroll;
+}
+.admin-plus {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 20px;
 }
 .admin-buttons {
   display: flex;
   justify-content: space-between;
-  padding-top: 15px;
+  padding-bottom: 20px;
 }
 .edit-button {
   width: 100%;
@@ -11782,8 +11788,8 @@ form button:hover {
 }
 .plus-icon {
   position: relative;
-  width: 24px;
-  height: 24px;
+  width: 12px;
+  height: 12px;
 }
 .plus-icon span {
   position: absolute;
