--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -202,14 +202,20 @@ form button:hover {
 }
 
 .card-content p { //fix for non logged in users
+    margin-bottom: 20px;
     height: 165px;
     overflow-y: scroll;
 }
 // Admin buttons
+.admin-plus {
+    display: flex;
+    justify-content: end;
+    margin-bottom: 20px;
+}
 .admin-buttons {
     display:flex;
     justify-content: space-between;
-    padding-top:15px;
+    padding-bottom: 20px;
 }
 .edit-button {
     width: 100%;
@@ -270,8 +276,8 @@ form button:hover {
 
 .plus-icon {
     position: relative;
-    width: 24px;
-    height: 24px;
+    width: 12px;
+    height: 12px;
 }
 
 .plus-icon span {
